Aggregate team run moderator events
